# fastapi-crud-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  user.py
app/routers/: auth.py  users.py
app/schemas/: auth.py  user.py
app/services/: auth.py  user.py
tests/: conftest.py  test_auth.py  test_services.py  test_users.py
